--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -5,7 +5,7 @@
 
 
 [class~=app] {
-    background:url(https://i.imgur.com/nZBJAsK.jpg) !important;
+    background:url(https://i.imgur.com/PTT4OKi.jpg) !important;
     background-size: cover !important;
 }
 [class~=guilds-wrapper] [class~=guilds] [class~=friends-icon] {
