--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -1,4 +1,4 @@
-
+//META{"name":"NotAnotherAnimeTheme","description":"Anime theme made by WhatDaPuck#2080","author":"WhatDaPuck","version":"1.3"}*//{}
 
 
 @import url(https://gitcdn.xyz/repo/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
