--- a/css/NotAnotherAnimeTheme.css
+++ b/css/NotAnotherAnimeTheme.css
@@ -662,11 +662,6 @@
     background-color: rgba(0, 0, 0, 0);
 }
 
-.theme-dark .modal-3HOjGZ {
-    background-color: rgba(255, 255, 255, 0);
-    box-shadow: 0 0 0 1px rgba(67, 181, 129, 0.2), 0 2px 10px 0 rgba(67, 181, 129, 0.2);
-}
-
 .theme-dark .friends-table .messages .message-group-blocked .message-group-blocked-btn,
 .theme-dark .messages-wrapper .messages .message-group-blocked .message-group-blocked-btn {
     background: rgba(0, 0, 0, 0.5);
@@ -7321,4 +7316,15 @@ textarea {
 .theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
     background: -webkit-gradient(linear,left top,right top,color-stop(85%,#282b30),to(#2f3136));
     background: linear-gradient(90deg,rgba(67,181,129,0.2) 85%,rgba(0, 0, 0, 0));
+}
+
+.theme-dark .footer-1PYmcw {
+    background-color: rgba(0, 0, 0, 0.8);
+    -webkit-box-shadow: inset 0 1px 0 rgba(47,49,54,.6);
+    box-shadow: inset 0 1px 0 rgba(47,49,54,.6);
+}
+
+.theme-dark .modal-3HOjGZ {
+    background-color: rgba(0,0,0,0.8);
+    box-shadow: 0 0 0 1px rgba(67, 181, 129, 0.2), 0 2px 10px 0 rgba(67, 181, 129, 0.2);
 }
