Color change for channel categories

--- a/variations/NotAnotherAnimeThemeSCSL.theme.css
+++ b/variations/NotAnotherAnimeThemeSCSL.theme.css
@@ -7396,3 +7396,7 @@ textarea {
 .theme-dark .header-toolbar .toolbar-badge {
     border-color: rgba(0, 0, 0, 0);
 }
+
+.iconCollapsed-1INdMX, .iconDefault-xzclSQ, .nameCollapsed-3_ChMu, .nameDefault-Lnjrwm {
+    color: #43b581;
+}
