--- a/css/NotAnotherAnimeTheme.css
+++ b/css/NotAnotherAnimeTheme.css
@@ -7332,3 +7332,7 @@ textarea {
 .theme-dark .header-toolbar .toolbar-badge {
     border-color: rgba(0, 0, 0, 0);
 }
+
+.iconCollapsed-1INdMX, .iconDefault-xzclSQ, .nameCollapsed-3_ChMu, .nameDefault-Lnjrwm {
+    color: #43b581;
+}
