--- a/variations/NotAnotherAnimeThemeSCSL.theme.css
+++ b/variations/NotAnotherAnimeThemeSCSL.theme.css
@@ -1,5 +1,5 @@
 //META{"name":"NotAnotherAnimeThemeSCSL","description":"Anime theme made by WhatDaPuck#2080 | Single Column Server List","author":"WhatDaPuck#2080","version":"1.0"}*//{}
-@import url();
+@import url(https://gitcdn.xyz/repo/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeThemeSCSL.css);
 
 
 /*      THIS THEME IS THE SAME AS THE ORIGINAL EXCEPT IT HAS A SINGLE COLUMN FOR SERVERS INSTEAD OF TWO                                                 */
