--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -90,7 +90,7 @@
 
 
 
-/*THIS CHANGES THE COLOR OF THE CHANNEL/VOICE CATEGORIES*/
+/*THIS CHANGES THE COLOR OF THE CHANNEL/VOICE CATEGORIES - https://i.imgur.com/4cURWzl.png */
 .iconCollapsed-1INdMX, .iconDefault-xzclSQ, .nameCollapsed-3_ChMu, .nameDefault-Lnjrwm {
     color: #43b581;
 }
