--- a/variations/NotAnotherAnimeThemeSCSL.theme.css
+++ b/variations/NotAnotherAnimeThemeSCSL.theme.css
@@ -18,7 +18,7 @@
 
 /*To edit any colors in this theme you can use hex or rgba*/
 /*Example hex code: #43b581 - that is the default discord green*/
-/*Example rgb: rbga(255, 0, 0, 0.5) - that is red with half transparency*/
+/*Example rgba: rbga(255, 0, 0, 0.5) - that is red with half transparency*/
 /*rgba works like this rgba(RED, GREEN, BLUE, ALPHA) - red, green and blue should be self-explanatory.  alpha is just transparency with 0.00 being the lowest and 1.00 being the highest*/
 
 
