Added LFG support

--- a/css/NotAnotherAnimeTheme.css
+++ b/css/NotAnotherAnimeTheme.css
@@ -7401,3 +7401,7 @@ textarea {
 .headerPlaying-2eYqm9 {
     background: #000000;
 }
+
+.theme-dark .lfg-3xoFkI {
+    background-color: rgba(0, 0, 0, 0.8);
+}
