Fixed background not appearing

--- a/css/NotAnotherAnimeTheme.css
+++ b/css/NotAnotherAnimeTheme.css
@@ -7405,3 +7405,7 @@ textarea {
 .theme-dark .lfg-3xoFkI {
     background-color: rgba(0, 0, 0, 0.8);
 }
+
+.theme-dark .layer-kosS71, .theme-dark .layers-20RVFW {
+    background: rgba(0, 0, 0, 0);
+}
