--- a/css/NotAnotherAnimeThemeSCSL.css
+++ b/css/NotAnotherAnimeThemeSCSL.css
@@ -7431,3 +7431,7 @@ textarea {
 .theme-dark .lfg-3xoFkI {
     background-color: rgba(0, 0, 0, 0.8);
 }
+
+.theme-dark .layer-kosS71, .theme-dark .layers-20RVFW {
+    background: rgba(0, 0, 0, 0);
+}
