--- a/css/NotAnotherAnimeTheme.css
+++ b/css/NotAnotherAnimeTheme.css
@@ -7409,3 +7409,8 @@ textarea {
 .theme-dark .layer-kosS71, .theme-dark .layers-20RVFW {
     background: rgba(0, 0, 0, 0);
 }
+
+
+.headerSpotify-1fSJPO {
+    background: #000000;
+}
