--- a/css/NotAnotherAnimeThemeSCSL.css
+++ b/css/NotAnotherAnimeThemeSCSL.css
@@ -7435,3 +7435,7 @@ textarea {
 .theme-dark .layer-kosS71, .theme-dark .layers-20RVFW {
     background: rgba(0, 0, 0, 0);
 }
+
+.headerSpotify-1fSJPO {
+    background: #000000;
+}
