--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -4,7 +4,7 @@
 
 
 
-/*To make editing this theme easier I recommend using Notepad++ , you can donwload it for free here - https://notepad-plus-plus.org/download/ */
+/*To make editing this theme easier I recommend using Notepad++ , you can download it for free here - https://notepad-plus-plus.org/download/ */
 
 
 
