--- a/variations/NotAnotherAnimeThemeSCSL.theme.css
+++ b/variations/NotAnotherAnimeThemeSCSL.theme.css
@@ -6,7 +6,7 @@
 /*      IF YOU WANT THE ORIGINAL GO TO THIS LINK -> https://github.com/WhatDaPuck/NotAnotherAnimeTheme/blob/master/NotAnotherAnimeTheme.theme.css       */
 
 
-/*To make editing this theme easier I recommend using Notepad++ , you can donwload it for free here - https://notepad-plus-plus.org/download/ */
+/*To make editing this theme easier I recommend using Notepad++ , you can download it for free here - https://notepad-plus-plus.org/download/ */
 
 
 
