fixed "XXX is typing..."

--- a/css/NotAnotherAnimeThemeSCSL.css
+++ b/css/NotAnotherAnimeThemeSCSL.css
@@ -7443,3 +7443,7 @@ textarea {
 .topSectionSpotify-3744IX {
     background: #000000;
 }
+
+.theme-dark .typing-3eiiL_ {
+    background-color: rgba(0, 0, 0, 0);
+}
