--- a/css/NotAnotherAnimeTheme.css
+++ b/css/NotAnotherAnimeTheme.css
@@ -7418,3 +7418,7 @@ textarea {
 .topSectionSpotify-3744IX {
     background: #000000;
 }
+
+.theme-dark .typing-3eiiL_ {
+    background-color: rgba(0, 0, 0, 0);
+}
