--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -233,7 +233,7 @@ dark .channel-members .member:hover {
 
 
 
-/*THIS CHANGES THE MENU WHEN YOU CLICK THE 3 DOTS ON THE TOP RIGHT OF A MESSAGE*/
+/*THIS CHANGES THE MENU WHEN YOU CLICK THE 3 DOTS IN THE TOP RIGHT OF A MESSAGE*/
 .small-popout-box {
     background: #000;
     border: 1px solid #43b581;
