fixed profile colors

--- a/css/NotAnotherAnimeTheme.css
+++ b/css/NotAnotherAnimeTheme.css
@@ -7422,3 +7422,16 @@ textarea {
 .theme-dark .typing-3eiiL_ {
     background-color: rgba(0, 0, 0, 0);
 }
+
+.headerSpotify-26yUf5 {
+    background: #000000;
+}
+
+.theme-dark .body-3ljq11, .theme-dark .footer-2wFs91 {
+    background-color: #000000;
+    color: hsla(0,0%,100%,.8);
+}
+
+.theme-dark .headerNormal-3Vn9nT {
+    background-color: #000000;
+}
