--- a/css/NotAnotherAnimeTheme.css
+++ b/css/NotAnotherAnimeTheme.css
@@ -7435,3 +7435,7 @@ textarea {
 .theme-dark .headerNormal-3Vn9nT {
     background-color: #000000;
 }
+
+.headerPlaying-2Q7mBy {
+    background: #000000;
+}
