--- a/css/NotAnotherAnimeThemeTCSL.css
+++ b/css/NotAnotherAnimeThemeTCSL.css
@@ -7436,3 +7436,7 @@ textarea {
 .theme-dark .headerNormal-3Vn9nT {
     background-color: #000000;
 }
+
+.headerPlaying-2Q7mBy {
+    background: #000000;
+}
