--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -1,5 +1,5 @@
 //META{"name":"NotAnotherAnimeTheme","description":"Anime theme made by WhatDaPuck#2080, make sure you're up to date at https://goo.gl/dcCBQd","author":"WhatDaPuck#2080","version":"2.2"}*//{}
-@import url(https://gitcdn.xyz/repo/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
+@import url(https://cdn.rawgit.com/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
 @IMPORT URL("HTTPS://RAWGIT.COM/0MNISCIENT/DISCORD-THEMES/MASTER/CSS/TAGS.CSS");
 
 
