--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -263,3 +263,10 @@ dark .channel-members .member:hover {
     color: rgba(255, 255, 255, 0.5) !important;
     /*You can change the font weight by editing the alpha, 0.5 is default, 1.0 would be bold*/
 }
+
+
+
+/*THIS CHANGES THE TOOLTIP FOR WHEN YOU HOVER OVER A SERVER*/
+.tooltip.tooltip-black {
+    background-color: #2f3136;
+}
