--- a/css/NotAnotherAnimeThemeTCSL.css
+++ b/css/NotAnotherAnimeThemeTCSL.css
@@ -7437,3 +7437,8 @@ textarea {
 .headerPlaying-2Q7mBy {
     background: #000000;
 }
+
+.theme-dark .input-2YozMi {
+    background: rgba(32,34,37,.3);
+    border-color: #202225;
+}
