fixed profiles being gray

--- a/css/NotAnotherAnimeThemeTCSL.css
+++ b/css/NotAnotherAnimeThemeTCSL.css
@@ -7446,3 +7446,7 @@ textarea {
 .base-3AoPqv {
     border-radius: 0;
 }
+
+.theme-dark .topSectionNormal-2LlRG1 {
+    background-color: #000000;
+}
