--- a/css/NotAnotherAnimeThemeSCSL.css
+++ b/css/NotAnotherAnimeThemeSCSL.css
@@ -7470,3 +7470,7 @@ textarea {
 .base-3AoPqv {
     border-radius: 0;
 }
+
+.theme-dark .topSectionNormal-2LlRG1 {
+    background-color: #000000;
+}
