--- a/css/NotAnotherAnimeThemeTCSL.css
+++ b/css/NotAnotherAnimeThemeTCSL.css
@@ -7450,3 +7450,7 @@ textarea {
 .theme-dark .topSectionNormal-2LlRG1 {
     background-color: #000000;
 }
+
+.theme-dark .members-1bid1J {
+    background-color: rgba(0, 0, 0, 0.8);
+}
