--- a/css/NotAnotherAnimeThemeSCSL.css
+++ b/css/NotAnotherAnimeThemeSCSL.css
@@ -7474,3 +7474,7 @@ textarea {
 .theme-dark .topSectionNormal-2LlRG1 {
     background-color: #000000;
 }
+
+.theme-dark .members-1bid1J {
+    background-color: rgba(0, 0, 0, 0.8);
+}
