added support discord link

--- a/variations/NotAnotherAnimeThemeSCSL.theme.css
+++ b/variations/NotAnotherAnimeThemeSCSL.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"NotAnotherAnimeThemeSCSL","description":"Anime theme made by WhatDaPuck#2080 | Single Column Server List, make sure you're up to date at https://goo.gl/dcCBQd","author":"WhatDaPuck#2080","version":"1.0"}*//{}
+//META{"name":"NotAnotherAnimeThemeSCSL","description":"Anime theme made by WhatDaPuck#2080 | Single Column Server List, make sure you're up to date at https://goo.gl/dcCBQd , Get support here https://discord.gg/FdZhbjY","author":"WhatDaPuck#2080","version":"1.0"}*//{}
 @import url(https://cdn.rawgit.com/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeThemeSCSL.css);
 
 
