--- a/variations/NotAnotherAnimeThemeTCSL.theme.css
+++ b/variations/NotAnotherAnimeThemeTCSL.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"NotAnotherAnimeThemeTCSL","description":"Anime theme made by WhatDaPuck#2080 | Triple Column Server List, make sure you're up to date at https://goo.gl/dcCBQd","author":"WhatDaPuck#2080","version":"1.0"}*//{}
+//META{"name":"NotAnotherAnimeThemeTCSL","description":"Anime theme made by WhatDaPuck#2080 | Triple Column Server List, make sure you're up to date at https://goo.gl/dcCBQd , Get support here https://discord.gg/FdZhbjY","author":"WhatDaPuck#2080","version":"1.0"}*//{}
 @import url(https://cdn.rawgit.com/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeThemeTCSL.css);
 
 /*      THIS THEME IS THE SAME AS THE ORIGINAL EXCEPT IT HAS TRIPLE COLUMNS FOR SERVERS INSTEAD OF TWO                                                 */
