--- a/css/NotAnotherAnimeTheme.css
+++ b/css/NotAnotherAnimeTheme.css
@@ -1,4 +1,4 @@
-//META{"name":"NotAnotherAnimeTheme","description":"Anime theme made by WhatDaPuck#2080","author":"WhatDaPuck","version":"2.2"}*//{}
+//META{"name":"NotAnotherAnimeTheme","description":"Anime theme made by WhatDaPuck#2080 CSS","author":"WhatDaPuck","version":"2.2"}*//{}
 
 /*DONT TOUCH ANYTHING HERE UNLESS YOU REALLY KNOW WHAT YOU'RE DOING*/
 
