--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"NotAnotherAnimeTheme","description":"Anime theme made by WhatDaPuck#2080, make sure you're up to date at https://goo.gl/dcCBQd , Get support here https://discord.gg/FdZhbjY","author":"WhatDaPuck#2080","version":"2.2"}*//{}
+//META{"name":"NotAnotherAnimeTheme","description":"Anime theme made by puckzxz#2080, make sure you're up to date at https://goo.gl/dcCBQd , Get support here https://discord.gg/FdZhbjY","author":"puckzxz#2080","version":"2.2"}*//{}
 @import url(https://gitcdn.link/repo/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
 
 
