--- a/community/Winter/Winter.theme.css
+++ b/community/Winter/Winter.theme.css
@@ -1,6 +1,5 @@
 //META{"name":"NAAT - Winter","description":"Winter theme made using NotAnotherAnimeTheme","author":"V-X#5476","version":"1.0"}*//{}
-@import url(https://cdn.rawgit.com/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
-@IMPORT URL("HTTPS://RAWGIT.COM/0MNISCIENT/DISCORD-THEMES/MASTER/CSS/TAGS.CSS");
+@import url(https://rawgit.com/puckzxz/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
 
 
 /*      THIS THEME IS THE SAME AS THE ORIGINAL EXCEPT IT HAS A SINGLE COLUMN FOR SERVERS INSTEAD OF TWO                                                 */
