--- a/community/ZeroTwo/ZeroTwo.theme.css
+++ b/community/ZeroTwo/ZeroTwo.theme.css
@@ -1,6 +1,5 @@
 //META{"name":"Zero Two Theme","description":"Anime theme made by WhatDaPuck#2080, make sure you're up to date at https://goo.gl/dcCBQd","author":"WhatDaPuck#2080","version":"2.2"}*//{}
-@import url(https://cdn.rawgit.com/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
-@IMPORT URL("HTTPS://RAWGIT.COM/0MNISCIENT/DISCORD-THEMES/MASTER/CSS/TAGS.CSS");
+@import url(https://rawgit.com/puckzxz/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
 
 
 /*Theme customized by Seva#4085*/
