--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -1,5 +1,5 @@
 //META{"name":"NotAnotherAnimeTheme","description":"Anime theme made by puckzxz#2080, make sure you're up to date at https://goo.gl/dcCBQd , Get support here https://discord.gg/FdZhbjY","author":"puckzxz#2080","version":"2.2"}*//{}
-@import url(https://gitcdn.link/repo/WhatDaPuck/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
+@import url(https://rawgit.com/puckzxz/NotAnotherAnimeTheme/master/css/NotAnotherAnimeTheme.css);
 
 
 /*To make editing this theme easier I recommend using Notepad++ , you can download it for free here - https://notepad-plus-plus.org/download/ */
